Fix: Overlap on profile 'Sectors of Interest' items

--- a/enrolment/static/sass/company-profile-details.scss
+++ b/enrolment/static/sass/company-profile-details.scss
@@ -170,6 +170,7 @@
   background: $stone;
   border-radius: 6px;
   color: $mid-grey;
+  display: inline-block;
   font-size: 1em;
   font-weight: 300;
   margin: 0 5px 8px 0;
